--- a/css/style.css
+++ b/css/style.css
@@ -1266,7 +1266,7 @@ a {
   .block-38 .block-38-header img {
     width: 400px;
     margin: 0 auto;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
     margin-bottom: 20px; }
   .block-38 .block-38-body {
     font-size: 1.1rem; }
